CHANGES IN VERSION 1.0.7
------------------------
 o 

CHANGES IN VERSION 1.0.6
------------------------
 o new data from Groen et al <2013-12-20 Fri>

CHANGES IN VERSION 1.0.5
------------------------
 o changed featureNames(tan2006r*) to FBgn numbers <2013-12-16 Mon> 

CHANGES IN VERSION 1.0.4
------------------------
 o Bioc 2.14 version bump

CHANGES IN VERSION 1.0.3
------------------------
 o Bioc 2.13 version bump

CHANGES IN VERSION 1.0.2
------------------------
 o new data from Hall et al 2009 <2013-10-01 Tue>

CHANGES IN VERSION 1.0.1
------------------------
 o changed featureNames(dunkley2006) to upper case <2013-09-17 Tue> 

CHANGES IN VERSION 1.0.0
------------------------
 o bumping version for stable release <2013-04-07 Sun>

CHANGES IN VERSION 0.99.11
--------------------------
 o Bioc 2.12 version bump

CHANGES IN VERSION 0.99.10
--------------------------
 o Fixed non ASCII warning <2013-03-19 Tue>

CHANGES IN VERSION 0.99.9
-------------------------
 o added column 'pd.validated' to datasets used in Breckels et al. 
  with the organelle/protein family assignments manually assigned
   to each phenotype from UniprotKB. <2013-03-05 Tue>
 o added data from Nikolovski et al 2012. <2013-03-13 Wed>
 o removed column pd.validated and added new column to fData called
   pd.markers which contains all original organelle markers plus
   new protein markers found using phenoDisco as described in Breckels
   et al paper. <2013-03-18 Mon>
 o updated fvarMetaData slot for all datasets used in Breckels et al 
   paper <2013-03-18 Mon>
 o updated nikolovski pData <2013-03-18 Mon>

CHANGES IN VERSION 0.99.8
-------------------------
 o added shallow (from Dunkley 2006) and steep 
   (from Sadowski 2008) data set used in 
   Trotter et al 2010. <2013-03-04 Mon>

CHANGES IN VERSION 0.99.7
-------------------------
 o New Andy2011 dataset on HEK293T added <2013-02-26 Tue>
 o Updated all existing LOPIT datasets used in Breckels et al.