@@ -1,6 +1,7 @@
 CHANGES IN VERSION 1.0.7
 ------------------------
- o 
+ o added Uniprot accesion number and entry names to Tan datasets
+   <2013-03-10 Mon> 
 
 CHANGES IN VERSION 1.0.6
 ------------------------
